Ready to deploy. Removed material-ui

--- a/src/pages/layout.css
+++ b/src/pages/layout.css
@@ -1,8 +1,9 @@
 body {
-    margin: 0;
     font-family: Colfaxx,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
     color: #333;
     font-size: 150%;
+    margin: 20px;
+    overflow-x: hidden;
 }
 
 .contained {
@@ -11,14 +12,22 @@ body {
 }
 
 .section {
-    padding: 3rem 0 3rem 0
+    padding: 2rem 0 2rem 0
 }
 
 .underline {
     border-radius: 0 !important;
     background-color: inherit !important;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
     border-bottom: 5px solid transparent !important;
     transition: border-bottom 0.3s,  color 0.3s !important;
+    color: white;
+    font-size: 150%;
+    font-weight: 700;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
 }
 
 .underline:hover {
