--- a/src/pages/layout.css
+++ b/src/pages/layout.css
@@ -8,6 +8,9 @@ body {
     body{
         font-size: 150%;
     }
+    .underline {
+        font-size: 150%;
+    }
 }
 
 .contained {
@@ -28,15 +31,14 @@ body {
     border-bottom: 5px solid transparent !important;
     transition: border-bottom 0.3s,  color 0.3s !important;
     color: white;
-    font-size: 150%;
     font-weight: 700;
     padding-bottom: 1rem;
     padding-top: 1rem;
 }
 
 .underline:hover {
-    border-bottom-color: orange !important;
-    color: orange;
+    border-bottom-color: #FFF874 !important;
+    color: #FFF874;
 }
 
 .centered {
@@ -58,5 +60,5 @@ body {
 .blueButton:hover {
     cursor: pointer;
     /* background:  #3f51b5; */
-    color: orange !important;
+    color: #FFF874 !important;
 }
