--- a/src/pages/layout.css
+++ b/src/pages/layout.css
@@ -4,6 +4,7 @@ body {
     margin: 20px;
     overflow-x: hidden;
 }
+
 @media (min-width: 992px) {
     body{
         font-size: 150%;
@@ -12,6 +13,13 @@ body {
         font-size: 150%;
     }
 }
+
+@media (max-width: 992px) {
+    .underline {
+        font-size: 125%;
+    }
+}
+
 
 .contained {
     max-width: 960px;
