Lighten color of scroller

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -97,7 +97,7 @@ h1, h2, h3{
     background-color: inherit;
     cursor: pointer;
     font-size: 120%;
-    background-color: #ddd;
+    background-color: #eee;
     border-radius: 20%;
 }
 
