--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -66,6 +66,7 @@ body {
     font-size: 125% !important;
     transition: color 0.3s !important;
     margin-bottom: 3rem;
+    margin-top: 3rem;
 }
 
 .blueButton:hover {
